# steempeg

./: .gitignore  README.md  Steempeg-gui.vbs  newver_compilator.py  pyproject.toml  run-linux.sh  smpeg0.py  smpeg30.py  smpegui.ui  smpegui13.ui
.github/workflows/: ci.yml
app/: smpeg0.py  smpeg1.py  smpeg10.py  smpeg11.py  smpeg12.1.py  smpeg12.py  smpeg13.py  smpeg14.py  smpeg15.py  smpeg16.py  smpeg17.py  smpeg18.py  smpeg19.py  smpeg2.py  smpeg20.py  smpeg21.py  smpeg22.py  smpeg23.py  smpeg24.py  smpeg25.py  smpeg26.py  smpeg27.1.py  smpeg27.py  smpeg28.py  smpeg29.1.py  smpeg29.py  smpeg3.py  smpeg4.py  smpeg5.py  smpeg6.py  smpeg7.py  smpeg8.py  smpeg9.py
docs/: release-notes-40.md
steempeg/: __main__.py  app.py  update_handler.py  version.py
steempeg/core/: capabilities.py  clip_identity.py  clip_thumbnails.py  games.py  rendered_health.py  rendered_media.py  steam_paths.py  steam_screenshots.py
steempeg/infra/: bundled_assets.py  cache.py  libmpv_bootstrap.py  locale_time.py  logging.py  paths.py  process.py  reports.py  single_instance.py
steempeg/render/: bitrate.py  encode_speed.py  output_formats.py  quality_presets.py  queue.py  queue_display.py  queue_history.py
steempeg/services/: release_catalog.py  steam_markers.py  update_install.py  update_job.py  updater.py
steempeg/ui/: already_running_dialog.py  batch_complete_dialog.py  dead_clip_dialogs.py  icon_assets.py  (+28 more)
ui/: smpegui10.ui  smpegui11.ui  smpegui12.ui  smpegui13.ui  smpegui14.ui  smpegui2.ui  smpegui3.ui  smpegui4.ui  smpegui5.ui  smpegui6.ui  smpegui7.ui  smpegui8.ui  smpegui9.ui
(+39 files in other folders)
